# Chip8

./: .gitignore  CMakeLists.txt
include/: interpreter.h  memory.h  screen.h
src/: chip8.c  interpreter.c  memory.c  screen.c
